--- a/browser/js/loginSignup/loginSignup.html
+++ b/browser/js/loginSignup/loginSignup.html
@@ -1,4 +1,4 @@
-<form id="login-form" name="loginForm" ng-submit="loginForm.$valid && sendLogin(login)">
+<!-- <form id="login-form" name="loginForm" ng-submit="loginForm.$valid && sendLogin(login)">
 
     <alert type="danger" ng-show="error">
         {{ error }}
@@ -13,4 +13,17 @@
         <input type="password" ng-model="login.password" class="form-control" id="login-password" placeholder="Password">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
-</form>
+</form> -->
+
+<div class="container" id="login-form">
+  <div class="row">
+    <div class="col-md-12">
+      <h3 class="page-header">MY ACCOUNT</h3>
+    </div>
+  <div class="row">
+    <login></login>
+    <signup></signup>
+    <oauth-button provider="provider" ng-repeat="provider in providers"></oauth-button>
+  </div>
+  </div>
+</div>
