--- a/browser/js/user/user.html
+++ b/browser/js/user/user.html
@@ -1,17 +1,17 @@
 <h2>{{user.userName}}</h2>
 <div class="col-xs-12">
-	<div class="col-xs-12 col-sm-3 stories-progress">
-		<h3>Return to: </h3>
-		<div ng-repeat='page in user.unfinishedPages'> 
-			<story-list-item story='page.story' class='col-xs-9'></story-list-item>
-			<button class='btn btn-success' ui-sref='page({id=page._id})'>Return</button>
-		</div>
-	</div>
-	<div class="col-xs-12 col-sm-3 avitar">
-		<div img-src='{{user.character.picture}}' class='img-center'></div>
+	<div class="col-xs-12 col-md-4 avitar">
+		<div img-src={{user.character.picture}} class='center-block'></div>
 		<h3>{{user.character.name}}</h3>
 	</div>
-	<div class="col-xs-12 col-sm-3 mastery">
+	<div class="col-xs-12 col-sm-6 col-md-4 stories-progress">
+		<h3>Return to: </h3>
+		<div ng-repeat='page in user.unfinishedPages'> 
+			<story-list-item story='page.story' class='col-xs-10'></story-list-item>
+			<button class='btn btn-success col-xs-2' ui-sref='page({id=page._id})'>Return</button>
+		</div>
+	</div>
+	<div class="col-xs-12 col-sm-6 col md-4 mastery">
 		<h3>My Skills</h3>
 		<div ng-repeat='concept in user.mastery'> 
 			<concept-item concept='concept' class='col-xs-12'></concept-item>
