list under spell is now re-orderable

--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -3,6 +3,9 @@
 		My spell
 	</div>
 	<div class="panel-body" droppable>
+		<ul ui-sortable ng-model="spellTools">
+		  <li ng-repeat="tool in spellTools">{{ tool }}</li>
+		</ul>
 
 	</div>
 </div>
