removed test data

--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -8,4 +8,10 @@
 		</ul>
 
 	</div>
+	<div class="text-center center-block">
+		<button class="btn">Clear</button>
+		<button class="btn">Run</button>
+		<button class="btn">Step</button>
+
+	</div>
 </div>
