not sure, got mastery directive working and maybe other stuff

--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -1,6 +1,6 @@
 <div class="panel">
 	<div class="panel-heading">
-		My spell
+		My spell {{{page.story}}}
 	</div>
 	<div class="panel-body" droppable>
 		<ul ui-sortable ng-model="spellTools">
