--- a/browser/js/common/directives/concept-item/concept-item.html
+++ b/browser/js/common/directives/concept-item/concept-item.html
@@ -1,6 +1,6 @@
 <div>
 	<h3>{{concept.topic}}</h3>
-	<p>Score: {{getScore()}}</p>
+	<p>Score: {{getScore(concept)}}</p>
 	<!-- placeholder for graph -->
 	<p>Points possible: {{concept.pointsPossible}}</p>
 	<p>Points earned: {{concept.pointsEarned}}</p>
