--- a/browser/js/user/user.html
+++ b/browser/js/user/user.html
@@ -1,19 +1,31 @@
-<h2>{{user.userName}}</h2>
+<h2 class='text-center'>{{user.username}}</h2>
 <div class="col-xs-12">
-	<div class="col-xs-12 col-md-4 avitar">
-		<div img-src={{user.character.picture}} class='center-block'></div>
+	<!-- user avitar - Might end up center (large screens) but haven't figured out how, or top(small) -->
+	<div class="col-xs-12 col-md-3 col-md-offset-4 avitar">
+		<div class='clearfix avitar-img center-block'>
+			<img-src={{user.character.picture}}></div>
 		<h3>{{user.character.name}}</h3>
 	</div>
-	<div class="col-xs-12 col-sm-6 col-md-4 stories-progress">
+	<!-- links to unfinished and finished - left or second -->
+	<div class="col-xs-12 col-sm-6 col-md-3 stories-progress">
 		<h3>Return to: </h3>
+		<!-- list of pages - links with sref -->
 		<div ng-repeat='page in user.unfinishedPages'> 
 			<story-list-item story='page.story' class='col-xs-10'></story-list-item>
-			<button class='btn btn-success col-xs-2' ui-sref='page({id=page._id})'>Return</button>
+			<button class='btn btn-success col-xs-2' ui-sref='page({id: page._id})'>Go</button>
+		</div>
+		<h3>Where I've been: </h3>
+		<!-- list of stories - links with sref -->
+		<div ng-repeat='story in user.completedStories'> 
+			<story-list-item story='story' class='col-xs-10'></story-list-item>
+			<button class='btn btn-success col-xs-2' ui-sref='page({story: story._id, pageNumber: 1})'>Go</button>
 		</div>
 	</div>
-	<div class="col-xs-12 col-sm-6 col md-4 mastery">
+	<!-- statistics - should be right or thrid -->
+	<div class="col-xs-12 col-sm-6 col md-3 mastery">
 		<h3>My Skills</h3>
+		<!-- concepts and scores (eventually graphs?) -->
 		<div ng-repeat='concept in user.mastery'> 
-			<concept-item concept='concept' class='col-xs-12'></concept-item>
+			<concept-item concept='concept' user='user' class='col-xs-12'></concept-item>
 	</div>
 </div>
