maybe actually added code commander files

--- a/browser/js/user/user.html
+++ b/browser/js/user/user.html
@@ -7,7 +7,8 @@
 		<h3>{{user.character.name}}</h3>
 	</div>
 	<!-- links to unfinished and finished - left or second -->
-	<div class="col-xs-12 col-sm-6 col-md-3 stories-progress">
+	<div class="col-xs-12 col-sm-6 col-md-3
+	 stories-progress">
 		<h3>Return to: </h3>
 		<!-- list of pages - links with sref -->
 		<div ng-repeat='page in user.unfinishedPages'> 
