--- a/browser/js/common/directives/story-list-item/story-list-item.html
+++ b/browser/js/common/directives/story-list-item/story-list-item.html
@@ -3,7 +3,7 @@
 	</div>
 	<div>
 		<h3>{{story.title}}</h3>
-		<p>Author: {{story.author}}</p>
+		<p ng-show="story.author">Author: {{story.author}}</p>
 		<p>Practice concepts: <span ng-repeat='concept in story.concepts'>{{concept}}, </span></p>
 		<p>{{story.description | limitTo: 100}}</p>
 	</div>
