--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -10,7 +10,7 @@
 	</div>
 	<div class="text-center center-block">
 		<button class="btn">Clear</button>
-		<button class="btn">Run</button>
+		<button class="btn" ng-click="runSpell()">Run</button>
 		<button class="btn">Step</button>
 
 	</div>
