--- a/browser/js/common/directives/tool-box/tool-box.html
+++ b/browser/js/common/directives/tool-box/tool-box.html
@@ -3,9 +3,9 @@
 		My Tools
 	</div>
 	<div class="panel-body">
-		<ul ui-sortable ng-model="spellTools">
-		  <li ng-repeat="tool in spellTools" draggable>{{ tool.action }}</li>
-		  <li ng-repeat="variable in spellVars" draggable>{{ variable.text}}</li>
+		<ul ui-sortable='sortableOptions' ng-model="spellTools">
+		  <li ng-repeat="tool in spellTools" draggable>{{ tool.text }}</li>
+		  <li ng-repeat="tool in spellVars track by $index" draggable>{{ tool.text}}</li>
 		</ul>
 
 	</div>
