--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -9,7 +9,7 @@
 
 	</div>
 	<div class="text-center center-block">
-		<button class="btn">Clear</button>
+		<button class="btn" ng-click="resetLevel()">Clear</button>
 		<button class="btn" ng-click="runSpell()">Run</button>
 		<button class="btn">Step</button>
 
