--- a/browser/js/user/user.html
+++ b/browser/js/user/user.html
@@ -1,29 +1,44 @@
 <h2 class='text-center'>{{user.username}}</h2>
 <div class="col-xs-12">
 	<!-- user avitar - Might end up center (large screens) but haven't figured out how, or top(small) -->
-	<div class="col-xs-12 col-md-3 col-md-offset-4 avitar">
+	<div class="col-xs-12 col-md-6 avitar">
 		<div class='clearfix avitar-img center-block'>
-			<img-src={{user.character.picture}}></div>
-		<h3>{{user.character.name}}</h3>
+			<img ng-src={{user.character.picture}}>
+		</div>
+
+		<h3>About me!</h3>
+		<!--TODO: add an edit button for character, age, gender, password-->
+		<p><b>My character: </b> {{user.character.name}}</p>
+		<p><b>Age: </b> {{user.age}}</p>
+		<p><b>Total points earned: </b>{{totalPoints}}</p>
+		<p><b>Completed Stories: </b>{{user.completedStories.length}}</p>
+		<p><b>Stories in progress: </b>{{user.unfinishedPages.length}}</p>
+
 	</div>
 	<!-- links to unfinished and finished - left or second -->
-	<div class="col-xs-12 col-sm-6 col-md-3
-	 stories-progress">
-		<h3>Return to: </h3>
-		<!-- list of pages - links with sref -->
-		<div ng-repeat='page in user.unfinishedPages'> 
-			<story-list-item story='page.story' class='col-xs-10'></story-list-item>
-			<button class='btn btn-success col-xs-2' ui-sref='page({id: page._id})'>Go</button>
+	<div class="col-sm-12 col-md-6
+	 stories-progress panel">
+	 	<div class="panel-body">
+			<h3>Return to: </h3>
+			<!-- list of pages - links with sref -->
+			<div ng-repeat='page in user.unfinishedPages'> 
+				<story-list-item story='page.story' class='col-xs-10'></story-list-item>
+				<button class='btn btn-success col-xs-2' ui-sref='page({id: page._id})'>Go</button>
+			</div>
 		</div>
-		<h3>Where I've been: </h3>
-		<!-- list of stories - links with sref -->
-		<div ng-repeat='story in user.completedStories'> 
-			<story-list-item story='story' class='col-xs-10'></story-list-item>
-			<button class='btn btn-success col-xs-2' ui-sref='page({story: story._id, pageNumber: 1})'>Go</button>
+
+		<div class="panel-body">
+			<h3>Where I've been: </h3>
+			<!-- list of stories - links with sref -->
+			<div ng-repeat='story in user.completedStories'> 
+				<story-list-item story='story' class='col-xs-10'></story-list-item>
+				<button class='btn btn-success col-xs-2' ui-sref='page({story: story._id, pageNumber: 1})'>Go</button>
+			</div>
+
 		</div>
 	</div>
 	<!-- statistics - should be right or thrid -->
-	<div class="col-xs-12 col-sm-6 col md-3 mastery">
+	<div class="col-xs-12 mastery">
 		<h3>My Skills</h3>
 		<!-- concepts and scores (eventually graphs?) -->
 		<div ng-repeat='concept in user.mastery'> 
