step through and move dragables make sprite move

--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -10,8 +10,8 @@
 	</div>
 	<div class="text-center center-block">
 		<button class="btn" ng-click="resetLevel()">Clear</button>
-		<button class="btn" ng-click="runSpell()">Run</button>
-		<button class="btn">Step</button>
+		<button class="btn" ng-click="runSpell(spellComponents)">Run</button>
+		<button class="btn" ng-click='stepThrough(spellComponents)'>Step</button>
 
 	</div>
 </div>
