--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -3,11 +3,9 @@
 		My spell
 	</div>
 	<div class="panel-body">
-		<ul class="dropzone" ui-sortable="draggable" >
+		<ul ui-sortable="spellConfig" ng-model="spellComponents" class="spellComponents spellBox">
 		  <li ng-repeat="tool in spellComponents track by $index"><span class="{{tool.type}}">{{ tool.text }}</span></li>
 		</ul>
-
-
 	</div>
 
 	<div class="text-center center-block">
