--- a/browser/js/common/directives/tool-box/tool-box.html
+++ b/browser/js/common/directives/tool-box/tool-box.html
@@ -5,26 +5,23 @@
 	<div class="panel-body">
 		<div class="col-md-4 col-sm-12">
 			<b>Tools</b>
-				<ul ui-sortable='draggable' ng-model="availableFields">
+				<ul ng-model="spellTools" ui-sortable="toolConfig"  class="spellTools">
 		  			<li ng-repeat="tool in spellTools" draggable><span class="tool">{{ tool.text }}</span></li>
 		  		</ul>
 
 		</div>
 		<div class="col-md-4 col-sm-12">
 			<b>Directions</b>
-				<ul ui-sortable='draggable' ng-model="availableFields">
-		  			<li ng-repeat="tool in directions" draggable><span class="direction" >{{ tool.text }}</span></li>
+				<ul>
+		  			<li ng-repeat="tool in directions" draggable="true"><span class="direction" >{{ tool.text }}</span></li>
 		  		</ul>
 
 		</div>
 		<div class="col-md-4 col-sm-12">
 			<b>Variables</b>
-				<ul ui-sortable='draggable' ng-model="availableFields">
-		  			<li ng-repeat="tool in spellVars track by $index" draggable><span class="variable" >{{ tool.text}}</span></li>
+				<ul>
+		  			<li ng-repeat="tool in spellVars track by $index" draggable="true"><span class="variable" >{{ tool.text}}</span></li>
 		  		</ul>
-
 		</div>
-
-
 	</div>
 </div>
