--- a/browser/js/common/directives/tool-box/tool-box.html
+++ b/browser/js/common/directives/tool-box/tool-box.html
@@ -5,7 +5,7 @@
 	<div class="panel-body">
 		<div class="col-md-4 col-sm-12">
 			<b>Tools</b>
-				<ul ng-model="spellTools" ui-sortable="toolConfig"  class="spellTools">
+				<ul ng-model="spellTools" ui-sortable="toolConfig"  class="spellTools first">
 		  			<li ng-repeat="tool in spellTools" draggable><span class="tool">{{ tool.text }}</span></li>
 		  		</ul>
 
