--- a/browser/js/story/story.html
+++ b/browser/js/story/story.html
@@ -1,3 +1,4 @@
 <div class="test">
-    <story-list-item class="test" ng-repeat="story in stories" story="story"></story-list-item>
+    <story-list-item class="test" ng-repeat="story in stories" story="story"
+                     ng-click="goToStoryPage(story._id)"></story-list-item>
 </div>
