added d3 for the mastery levels

--- a/browser/js/user/user.html
+++ b/browser/js/user/user.html
@@ -42,7 +42,9 @@
 	<div class="col-xs-12 mastery">
 		<h3>My Skills</h3>
 		<!-- concepts and scores (eventually graphs?) -->
-		<div ng-repeat='concept in user.mastery'> 
-			<concept-item concept='concept' user='user' class='col-xs-12'></concept-item>
+		<div id="mastery" class="text-center center-block"></div>
+<!-- 		<div ng-repeat='concept in user.mastery'> 
+			<concept-item concept='concept' user='user' class='col-xs-12'></concept-item> -->
 	</div>
+	
 </div>
