--- a/browser/js/common/directives/story-list-item/story-list-item.html
+++ b/browser/js/common/directives/story-list-item/story-list-item.html
@@ -1,6 +1,6 @@
 <div class="col-md-4">
-	<img ng-src={{story.cover}} class='col-md-6'>
-	<div class="'col-md-6">
+	<a ui-sref='indivStory'><img ng-src={{story.cover}} class='col-md-6'></a>
+	<div class="col-md-6">
 		<h3>{{story.title}}</h3>
 		<p ng-show="story.author">Author: {{story.author}}</p>
 		<p>Practice concepts: <span ng-repeat='concept in story.concepts'>{{concept}}, </span></p>
@@ -8,3 +8,4 @@
 	</div>
 </div>
 
+<div ui-view="content"></div>
