--- a/browser/js/common/directives/story-list-item/story-list-item.html
+++ b/browser/js/common/directives/story-list-item/story-list-item.html
@@ -1,5 +1,5 @@
 <div class="col-md-4">
-	<a ui-sref='indivStory'><img ng-src={{story.cover}} class='col-md-6'></a>
+    <img ng-src={{story.cover}} class='col-md-6'>
 	<div class="col-md-6">
 		<h3>{{story.title}}</h3>
 		<p ng-show="story.author">Author: {{story.author}}</p>
@@ -8,4 +8,5 @@
 	</div>
 </div>
 
-<div ui-view="content"></div>
+
+
