--- a/browser/js/story/story.html
+++ b/browser/js/story/story.html
@@ -1,5 +1,5 @@
 <div class="test" ng-hide="hide">
     <story-list-item class="test" ng-repeat="story in stories" story="story" ng-click="goToStoryPage(story)"></story-list-item>
 </div>
-<div ui-view="content"></div>
+<div ui-view="content" ui-sref-active="active"></div>
 
