--- a/browser/js/admin/admin.html
+++ b/browser/js/admin/admin.html
@@ -1,1 +1,16 @@
 <admin-stats></admin-stats>
+
+<div id="users" class="panel">
+	<div class="panel-heading">
+		<h3>Users</h3>
+	</div>
+
+	<div class="panel-body">
+		<!--Search options for users:
+				-search by name
+				-score (range)
+			-->
+
+			<admin-users class="col-sm-4 col-xs-6" ng-repeat="user in users" user="user" percent="findPercentage"><admin-users>
+	</div>
+</div>
