--- a/browser/js/admin/admin.html
+++ b/browser/js/admin/admin.html
@@ -41,3 +41,48 @@
 		<admin-users class="col-sm-4 col-xs-6" ng-repeat="user in users | filter:{username: searchUsers} | rangeFilter: score" user="user" percent="findPercentage"><admin-users>
 	</div>
 </div>
+
+<div id="stories" class="panel">
+	<div class="panel-heading">
+		<h3>Stories</h3>
+	</div>
+
+	<!--Search options for stories:
+			-search by title
+			-search by author
+			-concepts
+		-->
+	<div class="clearfix">
+		<div class="form-inline">
+			<div class="form-group col-sm-4 col-xs-12">
+				<label>Title: </label>
+				<input type="text" class="form-control" ng-model="searchTitle" placeholder="Search by title"/>
+
+			</div>
+
+			<div class="form-group col-sm-4 col-xs-12">
+				<label>Author: </label>
+				<input type="text" class="form-control" ng-model="searchAuthor" placeholder="Search by author"/>
+
+			</div>
+
+			<div class="col-sm-12 col-md-4 nav_button" dropdown >
+				<button id="single-button" type="button" class="btn btn-default btn-block" dropdown-toggle ng-disabled="disabled">
+				Filter by concepts<span class="caret"></span>
+				</button>
+
+
+				<ul class="dropdown-menu fixed-height-menu" role="menu" aria-labelledby="single-button">
+					<li ng-repeat="concept in concepts" ng-click="toggleConcept(concept, $event)">
+						<input type="checkbox" ng-model="clickedConcepts[concept]"/> {{concept}}
+					</li>
+				</ul>
+	        </div>
+
+
+		</div>
+	</div>
+
+	<admin-stories ng-repeat="story in stories | filter: {title:searchTitle, author: searchAuthor} | inArray: clickedConcepts" class="col-sm-4 col-xs-6"></admin-stories>
+</div>
+
