--- a/browser/js/common/directives/admin-stories/admin-stories.html
+++ b/browser/js/common/directives/admin-stories/admin-stories.html
@@ -1,5 +1,6 @@
 <div>
-	<h3>{{story.title}}</h3>
+	<!--TODO: links go to right url, but not right view-->
+	<h3><a ui-sref="story.indivStory({storyId: story._id})">{{story.title}}</a></h3>
 	<p><b>Author: </b> {{story.author}} </p>
 	<p><b>Difficulty: </b> {{story.difficulty}}</p>
 	<p><b>Concepts: </b> {{story.concepts.join(', ')}}</p>
