--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -4,7 +4,7 @@
             <fullstack-logo></fullstack-logo>
         </div>
         <ul class="nav navbar-nav">
-            <li ng-repeat="item in items" ng-show="!item.auth || isLoggedIn()">
+            <li ng-repeat="item in items" ng-show="!item.auth || isLoggedIn()" ng-if="item.admin && user.isAdmin || !item.admin">
                 <a ui-sref-active="active" ui-sref="{{ item.state }}">{{ item.label }}</a>
             </li>
         </ul>
