--- a/browser/js/common/directives/add-variable/add-variable.html
+++ b/browser/js/common/directives/add-variable/add-variable.html
@@ -1,13 +1,19 @@
 
 	<div class="panel-body">
-		<ul ui-sortable="dirComponentConfig" ng-model="tool.expressions" class="spellComponentDirs dirBox">
-		  <li>{{tool.condition.text}}</li>
-		  <li>{{tool.direction}}</li>
-		  <li>{{tool.distance}}</li>
-		  <li>{{tool.number}}</li>
-		  <li ng-repeat="variable in tool.expressions track by $index"><span class="{{variable.type}}">{{ variable.text }}<button ng-click="removeFromTool($index)">X</button></span></li>
+		<ul ui-sortable="dirComponentConfig" ng-model="tool.expressions" class="spellComponentDirs dirBox move spellCompExpr">
+		  <li ng-repeat="variable in tool.expressions track by $index"><span class="{{variable.type}}">{{ variable.text }} 
+			  <ul class='panel-body spellCompExpr'ui-sortable='dirComponentConfig' ng-model='variable.expressions'>
+			  	<li ng-repeat='thing in variable.expressions track by $index'><span class='{{thing.type}}'>{{ thing.text }}</span>
+			  	<button ng-click="removeFromTool($index, variable.expressions)">X</button>
+			  	</li>
+			  </ul>
+			  <button ng-click="removeFromTool($index, tool.expressions)">X</button></span>
+		  </li>
 		</ul>
 	</div>
 
 
 <!-- track by $index -->
+
+<!--
+<li ng-repeat="variable in tool.expressions track by $index"><span class="{{variable.type}}">{{ variable.text }}<button ng-click="removeFromTool($index)">X</button></span></li>
