--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -4,7 +4,15 @@
 	</div>
 	<div class="panel-body">
 		<ul ui-sortable="spellConfig" ng-model="spellComponents" class="spellComponents spellBox">
-		  <li ng-repeat="tool in spellComponents track by $index"><span class="{{tool.type}} spellTool">{{ tool.text }} <add-variable tool='tool'></add-variable><button ng-click="removeFromSpell($index)">X</button></span></li>
+		  <li ng-repeat="tool in spellComponents track by $index" class='{{tool.action}}'>
+		  	<span class="{{tool.type}} spellTool">{{ tool.text }}: {{tool.direction}} {{tool.condition}}
+		  		<add-variable tool='tool' removeFn='removeFromSpell'></add-variable>
+		  		<div ui-sortable="dirComponentConfig" ng-model="dirStuff" class="spellCompVars dirBox {{tool.action}} spellCompExpr">
+		  		</div>
+
+		  		<button ng-click="removeFromSpell($index, spellComponents)">X</button>
+		  	</span>
+		  </li>
 		</ul>
 	</div>
 
