--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -6,10 +6,9 @@
 		<ul ui-sortable="spellConfig" ng-model="spellComponents" class="spellComponents spellBox">
 		  <li ng-repeat="tool in spellComponents track by $index" class='{{tool.action}}'>
 		  	<span class="{{tool.type}} spellTool">{{ tool.text }}: {{tool.direction}} {{tool.condition}}
-		  		<add-variable tool='tool' removeFn='removeFromSpell'></add-variable>
-		  		<div ui-sortable="dirComponentConfig" ng-model="dirStuff" class="spellCompVars dirBox {{tool.action}} spellCompExpr">
+		  		<div ui-sortable="dirComponentConfig" ng-model="dirStuff" class="spellCompVars dirBox {{tool.action}} spellCompExpr" data-index='{{$index}}' data-array='spellComponents'>
 		  		</div>
-
+		  		<add-variable tool='tool' removeFn='removeFromSpell'></add-variable>
 		  		<button ng-click="removeFromSpell($index, spellComponents)">X</button>
 		  	</span>
 		  </li>
