--- a/browser/js/common/directives/add-variable/add-variable.html
+++ b/browser/js/common/directives/add-variable/add-variable.html
@@ -1,9 +1,10 @@
 
 	<div class="panel-body">
 		<ul ui-sortable="dirComponentConfig" ng-model="tool.expressions" class="spellComponentDirs dirBox spellCompExpr">
-		  <li ng-repeat="variable in tool.expressions track by $index"><span class="{{variable.type}}">{{ variable.text }} 
+		  <li ng-repeat="variable in tool.expressions track by $index" class="{{variable.type}}">
+		  	{{ variable.text }} 
 			  <ul class='panel-body spellCompExpr'ui-sortable='dirComponentConfig' ng-model='variable.expressions'data-index='$index'>
-			  	<li ng-repeat='thing in variable.expressions track by $index'><span class='{{thing.type}}'>{{ thing.text }}</span>
+			  	<li ng-repeat='thing in variable.expressions track by $index' class="{{thing.type}}"><span class=''>{{ thing.text }}</span>
 			  	<button ng-click="removeFromTool($index, variable.expressions)">X</button>
 			  	</li>
 			  </ul>
