--- a/browser/js/common/directives/spell/spell.html
+++ b/browser/js/common/directives/spell/spell.html
@@ -5,12 +5,44 @@
 	<div class="panel-body">
 		<ul ui-sortable="spellConfig" ng-model="spellComponents" class="spellComponents spellBox">
 		  <li ng-repeat="tool in spellComponents track by $index" class='{{tool.action}}'>
-		  	<span class="{{tool.type}} spellTool">{{ tool.text }}: {{tool.direction}} {{tool.condition}} {{tool.variable}} {{tool.person}}
-		  		<div ui-sortable="dirComponentConfig" ng-model="dirStuff" class="spellCompVars dirBox {{tool.action}} spellCompExpr" data-index='{{$index}}' data-array='spellComponents'>
-		  		</div>
-		  		<add-variable tool='tool' removeFn='removeFromSpell'></add-variable>
-		  		<button ng-click="removeFromSpell($index, spellComponents)">X</button>
-		  	</span>
+		  	<div class="spellTool panel {{tool.type}}">
+		  		<div class="panel-heading {{tool.type}}">
+			  		<span class="glyphicon glyphicon-remove pull-right" ng-click="removeFromSpell($index, spellComponents)"></span>
+
+			  		<h4 class="inline">
+			  			{{ tool.text.toUpperCase() }}
+			  		</h4>
+
+			  		<p ng-if="tool.action == 'move'" class="inline {{tool.action}}">
+			  			<input type="text" placeholder="{{tool.direction}}" disabled class="form-control inline" />
+			  		</p>
+
+			  		<div ng-if="tool.action == 'pickUp'" class="inline">
+			  			<p ui-sortable="dirComponentConfig" ng-model="dirStuff" class="inline form-control spellCompVars dirBox {{tool.action}} spellCompExpr" data-index='{{$index}}' data-array='spellComponents'>
+			  				{{tool.variable || 'Drop item here'}}
+				  		</p>
+
+			  		</div>
+
+			  		<p ng-if="tool.action === 'ifStatement' || tool.action === 'whileLoop'" class="inline {{tool.action}}" inline {{tool.action}}>
+			  			<input type="text" placeholder="{{tool.condition}}" disabled class="form-control inline" />
+			  		</p>
+
+
+
+
+			  	</div>
+			  	<div ng-if="tool.action!=='pickUp'" class="panel-body">
+			  		 {{tool.condition}} {{tool.variable}} {{tool.person}}
+
+			  		 {{tool}}
+		
+			  		<div ui-sortable="dirComponentConfig" ng-model="dirStuff" class="spellCompVars dirBox {{tool.action}} spellCompExpr" data-index='{{$index}}' data-array='spellComponents'>
+			  		</div>
+			  		<add-variable tool='tool' removeFn='removeFromSpell'></add-variable>
+			  	</div>
+
+		  	</div>
 		  </li>
 		</ul>
 	</div>
