--- a/browser/js/common/directives/tools/move-tool.html
+++ b/browser/js/common/directives/tools/move-tool.html
@@ -1,18 +1,18 @@
-  	<div class="spellTool panel {{tool.type}}">
-  		<div class="panel-heading {{tool.type}}">
-	  		<span class="glyphicon glyphicon-remove pull-right" ng-click="removeFromSpell($index, spellComponents)"></span>
+  	<div class="spellTool panel {{movetool.type}}">
+  		<div class="panel-heading {{movetool.type}}">
+	  		<span class="glyphicon glyphicon-remove pull-right" ng-click="remove($index, parent)"></span>
 
 	  		<h4 class="inline">
-	  			{{ tool.text.toUpperCase() }}
+	  			{{ movetool.text.toUpperCase() }}
 	  		</h4>
 
 	  		<div class="inline">
 
-	  			<p ui-sortable="dirComponentConfig" ng-model="dirStuff" class="inline form-control spellCompVars dirBox {{tool.action}} spellCompExpr" data-index='{{$index}}' data-array='spellComponents'>
-	  				{{tool.direction || 'Drop direction here'}}
+	  			<p ui-sortable="dirComponentConfig" ng-model="model" class="inline form-control spellCompVars dirBox {{movetool.action}} spellCompExpr" data-index='{{index}}' data-array='{{parent}}'>
+	  				{{movetool.direction || 'Drop direction here'}}
 		  		</p>
 
-		  		<input type="Number" ng-model="tool.distance" class="inline form-control"/>
+		  		<input type="Number" ng-model="movetool.distance" class="inline form-control"/>
 
 	  		</div>
 
