--- a/browser/js/common/directives/tools/action-tools.html
+++ b/browser/js/common/directives/tools/action-tools.html
@@ -11,6 +11,8 @@
   				{{actiontool.person || 'Drop person here'}}
 	  		</p>
 
+	  		{{model}}
+
 	  		<p ui-sortable="dirComponentConfig" ng-model="model" class="inline form-control spellCompVars dirBox {{actiontool.action}} variable spellCompExpr" data-index='{{index}}' data-array='{{parent}}'>
   				{{actiontool.variable || 'Drop item here'}}
 	  		</p>
