--- a/browser/js/common/directives/tools/logic-tools.html
+++ b/browser/js/common/directives/tools/logic-tools.html
@@ -7,7 +7,7 @@
   		</h4>
 
   		<div class="inline">
-  			<p ng-if="logictool.action !== 'forLoop'" ui-sortable="dirComponentConfig" ng-model="model" class="inline form-control spellCompVars dirBox {{logictool.action}} variable spellCompExpr" data-index='{{index}}' data-array='{{parent}}'>
+  			<p ng-if="logictool.action !== 'forLoop'" ui-sortable="dirComponentConfig" ng-model="logictool.condition" class="inline form-control spellCompVars dirBox {{logictool.action}} variable spellCompExpr" data-index='{{index}}' data-array='{{parent}}'>
   				{{logictool.condition || 'Drop item here'}}
 	  		</p>
   			
@@ -22,7 +22,7 @@
 
   		 {{logictool}}
 
-  		<div ui-sortable="dirComponentConfig" ng-model="model" class="spellCompVars dirBox {{logictool.action}} spellCompExpr" data-index='{{index}}' data-array='{{parent}}'>
+  		<div ui-sortable="dirComponentConfig" ng-model="logictool.expressions" class="spellCompVars dirBox {{logictool.action}} spellCompExpr" data-index='{{index}}' data-array='{{parent}}'>
   		</div>
 
        <!--  <ul ui-sortable="dirComponentConfig" ng-model="logictool.expressions" class="spellComponentDirs dirBox spellCompExpr">
