replaced _ with space on variable display

--- a/browser/js/common/directives/tools/action-tools.html
+++ b/browser/js/common/directives/tools/action-tools.html
@@ -14,7 +14,7 @@
 	  		{{model}}
 
 	  		<p ui-sortable="dirComponentConfig" ng-model="model" class="inline form-control spellCompVars dirBox {{actiontool.action}} variable spellCompExpr" data-index='{{index}}' data-array='{{parent}}'>
-  				{{actiontool.variable || 'Drop item here'}}
+  				{{actiontool.variable.replace(re, ' ') || 'Drop item here'}}
 	  		</p>
   		</div>
 
