--- a/browser/js/common/directives/tools/logic-tools.html
+++ b/browser/js/common/directives/tools/logic-tools.html
@@ -8,7 +8,7 @@
 
   		<div class="inline">
   			<p ng-if="logictool.action !== 'forLoop'" ui-sortable="dirComponentConfig" ng-model="logictool.condition" class="inline form-control spellCompVars dirBox {{logictool.action}} variable spellCompExpr" data-index='{{index}}' data-array='{{parent}}'>
-  				{{logictool.condition || 'Drop item here'}}
+  				{{logictool.condition.replace(re, ' ') || 'Drop item here'}}
 	  		</p>
   			
   			<input ng-if="logictool.action ==='forLoop'" type="Number" ng-model="logictool.number" class="inline form-control"/>
