--- a/browser/js/common/directives/add-variable/add-variable.html
+++ b/browser/js/common/directives/add-variable/add-variable.html
@@ -7,7 +7,7 @@
 
 		  	<move-tool ng-if="variable.action==='move'" movetool="variable" model="variable.expressions" index="$index" parent="tool.expressions" remove="removeFromTool"></move-tool>
 
-		  	<logic-tools ng-if="variable.action === 'ifStatement' || variable.action === 'whileLoop' || variable.action==='forLoop'" logictool="variable" model="variable.expressions" index="$index" parent="tool.expressions" remove="removeFromTool"></logic-tools>
+		  	<logic-tools ng-if="variable.action === 'ifStatement' || variable.action === 'whileLoop' || variable.action==='forLoop'" logictool="variable" model="variable" index="$index" parent="tool.expressions" remove="removeFromTool"></logic-tools>
 
 
 		  	<!-- <div class="panel {{variable.type}}">
