--- a/browser/js/common/directives/tools/action-tools.html
+++ b/browser/js/common/directives/tools/action-tools.html
@@ -6,6 +6,8 @@
 	  			{{ actiontool.text.toUpperCase() }}
 	  		</h4>
 
+	  		{{parent}}{{index}}
+
   		<div class="inline">
   			<p ng-if="actiontool.action !== 'pickUp'" ui-sortable="dirComponentConfig" ng-model="model" class="inline form-control spellCompVars dirBox {{actiontool.action}} variable spellCompExpr" data-index='{{index}}' data-array='{{parent}}'>
   				{{actiontool.person || 'Drop person here'}}
