--- a/browser/js/common/directives/tools/logic-tools.html
+++ b/browser/js/common/directives/tools/logic-tools.html
@@ -22,8 +22,8 @@
 
   		 {{logictool}}
 
-  		<div ui-sortable="dirComponentConfig" ng-model="model" class="spellCompVars dirBox {{logictool.action}} spellCompExpr" data-index='{{index}}' data-array='{{parent}}'>
-  		</div>
+  	<!-- 	<div ui-sortable="dirComponentConfig" ng-model="model" class="spellCompVars dirBox {{logictool.action}} spellCompExpr" data-index='{{index}}' data-array='{{parent}}'>
+  		</div> -->
 
        <!--  <ul ui-sortable="dirComponentConfig" ng-model="logictool.expressions" class="spellComponentDirs dirBox spellCompExpr">
               <li ng-repeat="variable in logictool.expressions track by $index" class="{{variable.type}}">
